# lite-xl

./: .gitignore  BUFFER_IMPLEMENTATION.md  COMMANDS_AND_EVENTS.md  Cargo.toml  DOCUMENT_MODULE_README.md  FILE_STRUCTURE.md  FLOEM_UI_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LITE_XL_COMPREHENSIVE_SPECIFICATION.md  QUICK_REFERENCE.md  README.md  RUST_EDITOR_MVP_ARCHITECTURE.md  TERMINAL_INTEGRATION_GUIDE.md  TERMINAL_PLUGIN_ARCHITECTURE.md  TERMINAL_PLUGIN_QUICK_START.md  TERMINAL_PLUGIN_SUMMARY.md  TERMINAL_UI_IMPLEMENTATION.md  UI_IMPLEMENTATION.md  test_new_modules.sh  verify_implementation.sh
docs/: PARSER_IMPLEMENTATION.md  PARSER_QUICK_REFERENCE.md  TERMINAL_INTEGRATION.md  TERMINAL_UI.md  TERMINAL_UI_ARCHITECTURE.txt
examples/: basic_usage.rs  buffer_demo.rs  command_event_demo.rs  config_demo.rs  file_io_demo.rs  file_watcher_demo.rs  parser_demo.rs  syntax_demo.rs  terminal_core_demo.rs  terminal_ui_demo.rs
src/: clipboard.rs  lib.rs  main.c  main.rs
src/buffer/: README.md  line_ending.rs  mod.rs  position.rs
src/commands/: editing.rs  file.rs  mod.rs  navigation.rs
src/config/: mod.rs
src/document/: mod.rs  selection.rs
src/editor/: mod.rs
src/events/: keyboard.rs  mod.rs
src/io/: file_watcher.rs  mod.rs
src/syntax/: languages.rs  mod.rs
src/terminal/: clipboard.rs  commands.rs  config.rs  manager.rs  mod.rs  state.rs
src/ui/: editor_view.rs  gutter.rs  mod.rs  statusbar.rs  terminal_canvas.rs  terminal_panel.rs  terminal_tabs.rs  theme.rs
src/undo/: mod.rs
tests/: buffer_integration_test.rs  integration_tests.rs
(+16 files in other folders)
