[package]
name = "lite-xl"
version = "0.1.0"
edition = "2021"
authors = ["Lite XL Team"]
description = "A lightweight, fast, and extensible text editor written in Rust"
license = "MIT"

[dependencies]
# UI Framework
floem = "0.2"

# Text Buffer Management
ropey = "1.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# File I/O and encoding
encoding_rs = "0.8"
memmap2 = "0.9"

# File watching
notify = "6.1"
notify-debouncer-full = "0.3"

# Syntax highlighting
syntect = "5.1"

# Terminal emulation (optional)
portable-pty = { version = "0.8", optional = true }
vte = "0.13"

# Configuration
toml = "0.8"
dirs = "5.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"

[features]
default = ["pty"]
pty = ["portable-pty"]

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"

[lib]
name = "lite_xl"
path = "src/lib.rs"

[[bin]]
name = "lite-xl"
path = "src/main.rs"
required-features = []
